Fix autocomplete for food items and activity log persons (#633)
Food log suggestions endpoint now triggers tag migration before returning
results, ensuring entries created without tags still appear in autocomplete.

Activity log persons now use a normalized PersonTag entity with a many-to-many
join table (activity_log_person_tags), matching the FoodTag pattern. This
provides case-insensitive deduplication and proper autocomplete suggestions
instead of parsing raw comma-separated strings from all entries.

Changes:
- Add PersonTag model with case-insensitive name matching (shared)
- Add PersonTagRepository interface (shared)
- Add ManyToMany PersonTag relationship to ActivityLog with getPersonList()
- Add JpaPersonTagRepository, DatabasePersonTagRepository (webserver)
- Update ActivityLogController to resolve person tags on create/update,
  migrate existing entries on suggestions fetch
- Update FoodLogController suggestions to call migrateTagsIfNeeded first
- Add H2PersonTagRepository for desktop, register in persistence.xml
- Add tests for PersonTag, updated controller tests, repository tests

https://claude.ai/code/session_013H2rZz6aPF82dYrxEsmqpA

Co-authored-by: Claude <noreply@anthropic.com>